[#5] Add cop for too long workers

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -47,6 +47,10 @@ Ducalis/RegexCop:
 Ducalis/StringsInActiverecords:
   Enabled: true
 
+Ducalis/TooLongWorkers:
+  Enabled: true
+  Max: 25
+
 Ducalis/UselessOnly:
   Enabled: true
 
