[#9] Add cop for redefine default ruby methods

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -80,6 +80,9 @@ Ducalis/ControllersExcept:
 Ducalis/PrivateInstanceAssign:
   Enabled: true
 
+Ducalis/StandardMethods:
+  Enabled: true
+
 Ducalis/RaiseWithoutErrorClass:
   Enabled: true
 
