[#7] Add cop for options argument

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -60,6 +60,9 @@ Ducalis/RestOnlyCop:
 Ducalis/KeywordDefaults:
   Enabled: true
 
+Ducalis/OptionsArgument:
+  Enabled: true
+
 Ducalis/RubocopDisable:
   Enabled: true
 
