[#10] Add cop to enforce pessimistic lock for gems

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -89,6 +89,9 @@ Ducalis/StandardMethods:
 Ducalis/RaiseWithoutErrorClass:
   Enabled: true
 
+Ducalis/UnlockedGem:
+  Enabled: true
+
 Ducalis/ModuleLikeClass:
   Enabled: true
   AllowedIncludes:
