[#8] Add cop which detects only class methods classes
Detect classes which have no any instance methods but only class
methods. Seems like it is ok for any tipe of classes, so there are no
any exceptions except inherited classes, but I'm not sure that it is
nescessary

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -51,6 +51,9 @@ Ducalis/TooLongWorkers:
   Enabled: true
   Max: 25
 
+Ducalis/OnlyDefsCope:
+  Enabled: true
+
 Ducalis/UselessOnly:
   Enabled: true
 
