[#8] Fix cop for class << self classes
Change cop name because cop suffix is pretty useless.
Add processing classes with `class << self` methods definitions

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -51,7 +51,7 @@ Ducalis/TooLongWorkers:
   Enabled: true
   Max: 25
 
-Ducalis/OnlyDefsCope:
+Ducalis/OnlyDefs:
   Enabled: true
 
 Ducalis/UselessOnly:
