--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: ruby
 rvm:
-  - 2.2.8
-  - 2.3.4
-  - 2.4.2
+  - 2.2.9
+  - 2.3.6
+  - 2.4.3
 before_install:
   - gem update --system
   - gem --version
+  - gem install bundler
