[#11] Add fetch expression cop
Add cap for fecth like calls. It's all about cases like params[:a] || b
Additionally add cases like params[:a] ? params[:a] || b.

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -35,6 +35,9 @@ Ducalis/DataAccessObjects:
 Ducalis/PossibleTap:
   Enabled: false
 
+Ducalis/FetchExpression:
+  Enabled: true
+
 Ducalis/ProtectedScopeCop:
   Enabled: true
   Exclude:
