--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -29,6 +29,9 @@ Ducalis/CaseMapping:
 Ducalis/CallbacksActiverecord:
   Enabled: true
 
+Ducalis/DataAccessObjects:
+  Enabled: true
+
 Ducalis/PossibleTap:
   Enabled: false
 
