[#65] Multiple times cop
This cop checks for multiple calling of time-related methods which could
potentialy lead to bugs:

Time.now.day..(Time.now.day + 1) at 23.59.59 01.01.2018 could be
evaluated as 1..3

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -66,6 +66,9 @@ Ducalis/RestOnlyCop:
 Ducalis/KeywordDefaults:
   Enabled: true
 
+Ducalis/MultipleTimes:
+  Enabled: true
+
 Ducalis/OptionsArgument:
   Enabled: true
 
