[#6] Enforce services namespaces
This cop add offenses for unnamespaces services code. Yep, there are
some exceptions for this rule but I really can't imagine anything,
additionaly it could be excluded by config.

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -20,6 +20,10 @@ Ducalis/BlackListSuffix:
     - Renderer
     - Loader
 
+Ducalis/EnforceNamespace:
+  Enabled: true
+  ServicePath: 'app/services'
+
 Ducalis/PreferableMethods:
   Enabled: true
 
