--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -1,6 +1,6 @@
 AllCops:
   DisabledByDefault: true
-  TargetRubyVersion: 2.3
+  TargetRubyVersion: ~
   Exclude:
     - 'db/**/*'
     - 'node_modules/**/*'
@@ -97,6 +97,9 @@ Ducalis/ControllersExcept:
   Enabled: true
 
 Ducalis/PrivateInstanceAssign:
+  Enabled: true
+
+Ducalis/EvlisOverusing:
   Enabled: true
 
 Ducalis/StandardMethods:
