[#73] Add cop which raises on send methods using

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -39,6 +39,9 @@ Ducalis/DataAccessObjects:
 Ducalis/PossibleTap:
   Enabled: false
 
+Ducalis/PublicSend:
+  Enabled: false
+
 Ducalis/FetchExpression:
   Enabled: true
 
