--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -120,3 +120,10 @@ Ducalis/ModuleLikeClass:
     - Sidekiq::Worker
     - Singleton
     - ActiveModel::Model
+
+Ducalis/DescriptiveBlockNames:
+  Enabled: true
+  MinimalLenght: 3
+  WhiteList:
+    - to
+    - id
