[#98] [skip ci] Add Virtus to ignored modules

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -120,6 +120,7 @@ Ducalis/ModuleLikeClass:
     - Sidekiq::Worker
     - Singleton
     - ActiveModel::Model
+    - Virtus.model
 
 Ducalis/DescriptiveBlockNames:
   Enabled: true
