[#114] Facade pattern cop
Add cop which triggers when controller's action contains more than N instance
variables.

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -30,6 +30,10 @@ Ducalis/PreferableMethods:
 Ducalis/CaseMapping:
   Enabled: true
 
+Ducalis/FacadePattern:
+  Enabled: true
+  MaxInstanceVariables: 4
+
 Ducalis/CallbacksActiverecord:
   Enabled: true
 
