[#110] Fix missing require for Recursion cop

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -27,6 +27,9 @@ Ducalis/EnforceNamespace:
 Ducalis/PreferableMethods:
   Enabled: true
 
+Ducalis/Recursion:
+  Enabled: true
+
 Ducalis/CaseMapping:
   Enabled: true
 
