[#DEV] Add `Service` word to blacklist

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -9,16 +9,17 @@ AllCops:
 Ducalis/BlackListSuffix:
   Enabled: true
   BlackList:
-    - Sorter
-    - Manager
-    - Client
-    - Object
-    - Handler
-    - Processor
-    - Organizer
     - Analyzer
-    - Renderer
+    - Client
+    - Handler
     - Loader
+    - Manager
+    - Object
+    - Organizer
+    - Processor
+    - Renderer
+    - Service
+    - Sorter
 
 Ducalis/EnforceNamespace:
   Enabled: true
