[#46] Complex regexes cop
Dreams come true! I have implemented it at last. Cop counts complex regex's
parts and advices to use long `\x` form for them.

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -31,6 +31,10 @@ Ducalis/PreferableMethods:
 Ducalis/Recursion:
   Enabled: true
 
+Ducalis/ComplexRegex:
+  Enabled: true
+  MaxComplexity: 3
+
 Ducalis/CaseMapping:
   Enabled: true
 
