[#133] Add tests folders to ignore by default

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -5,6 +5,8 @@ AllCops:
     - 'db/**/*'
     - 'node_modules/**/*'
     - 'vendor/bundle/**/*'
+    - 'spec/**/*'
+    - 'test/**/*'
 
 Ducalis/BlackListSuffix:
   Enabled: true
