[#134] Make it clear how to use Ducalis
- Need to use dot to refer current dir because RuboCop uses a little
bit strange path resolving
- So do not need to add spec folder to global exclude, it works as is
for most cops

--- a/config/.ducalis.yml
+++ b/config/.ducalis.yml
@@ -5,8 +5,6 @@ AllCops:
     - 'db/**/*'
     - 'node_modules/**/*'
     - 'vendor/bundle/**/*'
-    - 'spec/**/*'
-    - 'test/**/*'
 
 Ducalis/BlackListSuffix:
   Enabled: true
@@ -54,7 +52,7 @@ Ducalis/PossibleTap:
   Enabled: false
 
 Ducalis/PublicSend:
-  Enabled: false
+  Enabled: true
 
 Ducalis/FetchExpression:
   Enabled: true
